[package]
name = "rust-drop-tax"
version = "0.1.0"
edition = "2024"
autobenches = false

[lib]
bench = false

[[bench]]
name = "ast"
harness = false

[[bench]]
name = "shared_dag"
harness = false

[[bench]]
name = "nested_allocations"
harness = false

[[bench]]
name = "deep_list"
harness = false

[dependencies]
bump_alloc2 = { version = "0.2.0", optional = true }
bumpalo = "3.16"
mimalloc = { version = "0.1.52", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
snmalloc-rs = { version = "0.7.4", optional = true }
tcmalloc-better = { version = "0.1.19", optional = true }
tikv-jemallocator = { version = "0.7.0", optional = true }

[dev-dependencies]
divan = "0.1.21"

[features]
default = ["mimalloc"]
global-bump = ["dep:bump_alloc2"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
rpmalloc = ["dep:rpmalloc"]
snmalloc = ["dep:snmalloc-rs"]
tcmalloc = ["dep:tcmalloc-better"]
